--- a/detection.tex
+++ b/detection.tex
@@ -2,7 +2,7 @@
 \label{sec:detection}
 
 
-In this section, we explain our proposed two-fold\mn[Stef]{why two-fold?} detection mechanism, starting with an overview of the different steps followed by a detailed description of each step.  
+In this section, we explain our detection mechanism, starting with an overview of the different steps followed by a detailed description of each step.  
 The goal of the detection algorithm is to restore the user's satisfaction in the face of a \drop attack. The key idea of our method is to replace headnodes associated with peer groups of low satisfaction levels. 
 
 Throughput the section, we assume that nodes authenticate their messages using a private signature key. The source keeps track of the verification keys of all participants and can hence establish the authenticity of messages. In particular, malicious nodes cannot forge responses of honest peers to influence the detection mechanism. 
@@ -18,31 +18,33 @@ Furthermore, we assume that neighboring nodes periodically exchange messages sta
 \bf{Var.} & \bf{Description}  & \bf{Var.} & \bf{Description} \\\hline\hline
 $H_n$ & headnodes in a complaint & $P_n$ & potential candidates list \\\hline
 $x$ & no. of malicious peers & $\eta$ & mal. headnodes fraction\\\hline
-$BM$ & buffer-map & $MN$ & (1-$\eta$) non-headnodes mal. peers\\\hline
+$BM$ & buffer-map & $MN$ & mal. non-headnodes \\\hline
 $\sat$ & peer satisfaction level & $\satThres$ & satisfaction threshold \\\hline
-$\minP$ & min. drop responses & $\minDR$ & \drop det. allowed\\\hline
+$\minP$ & min. drop responses & $\minDR$ & no. allowed det. \\\hline
 \end{tabular}
 \label{tab:acronyms}
 \end{table}
-\mn[Stef]{Definition of $x, \eta$ in table inconsistent with evaluation; fix table size}
+% \mn[Stef]{Definition of $x, \eta$ in table inconsistent with evaluation; fix table size}
 
 \subsection{Mechanism Overview}
 We illustrated the underlying ideas of the detection mechanism in Figure~\ref{detection-blocks}.
 
 When a malicious peer $m$ performs a \drop attack, benign peers $b$ are unable to immediately identify malicious behavior.
-Specifically, $m$ never sends the actual $BM$ that represents the chunks it currently possesses, i.e., $m$ is only requesting chunks it already has. \mn[Stef]{how can it be `only'? it has to get the chunk for the first time at some point}
+Specifically, $m$ never sends the actual $BM$ that represents the chunks it currently possesses, i.e., $m$ is only requesting chunks it already has. 
+% % \mn[Stef]{how can it be `only'? it has to get the chunk for the first time at some point}
 Thus, detecting a violation in this case is not straight-forward. In particular, nodes are generally unable to identify a suspected attacker based only on local information.
 In the remainder of the section, we present a mechanism how nodes can collaboratively identify suspects that are subsequently removed as headnodes.  
 
 
-The detection consists of four steps\mn[Stef]{I changed the subsections to reflect these steps}, starting with an initial trigger of dissatisfaction at one peer and potentially terminating in the replacement of one or several headnodes. 
+The detection consists of four steps, starting with an initial trigger of dissatisfaction at one peer and potentially terminating in the replacement of one or several headnodes. 
 First, when a peer $b$ suspects a \drop attack based on its local observations, $b$ sends a \emph{detection request} to all peers in its neighbor list.
 Second, each peer receiving a detection request prepares a reply. 
 Third, the initiator $b$ decides based on the received responses if it should file a complaint with the source.
 If $b$ decides to file the complaint, $b$ sends it on behalf of the participating peers in the detection request. 
 Afterwards, the source verifies the complaint, reacts accordingly, and replies to $b$ detailing the steps taken. 
 The reaction of the source is either the replacement of one or several headnodes and proposing other potential headnodes or the rejection of the removal request.
-Finally, $b$ reacts based on the received reply from the source and then forwards the source's reply to the other participants in the complaint, who in turn do the same procedure. \mn[Stef]{unclear: do they also forward to neighbors? probably not}
+Finally, $b$ reacts based on the received reply from the source and then forwards the source's reply to the other participants in the complaint, who in turn do the same procedure.
+% \mn[Stef]{unclear: do they also forward to neighbors? probably not}
 
 The node $b$ bases its decision on whether to initiate a request or forward a complaint on a number of threshold parameters, which we summarize in Table~\ref{tab:acronyms} together with various system parameters governing the attack. 
 
@@ -51,7 +53,7 @@ The node $b$ bases its decision on whether to initiate a request or forward a co
 
 \begin{figure}
  \centering
- \includegraphics[width=5.5cm,height=6cm]{./Figures/detection.pdf}
+ \includegraphics[width=5.5cm,height=7cm]{./Figures/detection.pdf}
   \caption{Detection process for \drop. $S$ represents the source peer.}
 \label{detection-blocks} 
 \end{figure}
@@ -61,12 +63,15 @@ The node $b$ bases its decision on whether to initiate a request or forward a co
 
 
 In order to start a detection request, the $b$ has to experience a low level of satisfaction. 
-The satisfaction of a peer is defined as the fraction of missed chunks, i.e., the continuity of the stream according to the $Hit/Hit+miss$ chunk ratio. \mn[Stef]{how many chunks does the peer consider for that; all during the whole download, only the last $s$ seconds?}
+The satisfaction of a peer is defined as the fraction of missed chunks, i.e., the continuity of the stream according to the $Hit/Hit+miss$ chunk ratio.
+% \mn[Stef]{how many chunks does the peer consider for that; all during the whole download, only the last $s$ seconds?}
 In a nutshell, $b$ starts a detection request if its satisfaction is below a satisfaction threshold $\satThres$.
 However, to limit the ability of malicious peers to incorrectly accuse benign peers and increase the load through false detection requests, the concrete conditions that result in a detection request from $b$ are: 
 \begin{enumerate}
  \item $b$'s current satisfaction level $\sat_b$ is less than the predefined threshold, i.e., $\sat_b < \satThres$.
- \item The number of drop detection requests sent by $b$ in the last $t_{det}$ timeunits is $< \kappa$, where after $t_{det}$ peers are allowed to initiate $\kappa$ requests again. \mn[Stef]{unclear: is it 'only $\kappa$ requests in last $t_{det}$ timeunits' or 'we divide the time into epochs of length $t_{det}$ and you can only send $\kappa$ per epoch'?}
+ \item The number of drop detection requests sent by $b$ in the time interval $t_{det}$ is $< \kappa$. 
+%   \mn[Stef]{unclear: is it 'only $\kappa$ requests in last $t_{det}$ timeunits' or 'we divide the time into epochs of length $t_{det}$ and you can only send $\kappa$ per epoch'?}
+%   \mn[Hatem]{It is the second one (for every $t_{det}$, only $\kappa$ requests are allowed by peer), I fixed that in the text, please double check.}
  \item $b$ has not initiated or replied to any other \drop detection request that the source has not decided on yet
 \end{enumerate}
 The latter condition guarantees that peers cannot trigger or participate in multiple detection requests in parallel. In addition to limiting the opportunities for abuse, restricting the concurrent detection requests for benign peers is sensible as their low satisfaction level is already noted in their reply to previous requests. 
@@ -74,7 +79,9 @@ The latter condition guarantees that peers cannot trigger or participate in mult
 \subsection{Processing a Detection Request}
 Let $D$ denote the set of queried peers, usually corresponding to the neighbors of the initiator $b$ if $b$ executes the protocol honestly.  
 To avoid abuse of the detection mechanism, each node can only participate in $\kappa$ requests for $t_{det}$ timeunits. 
-When receiving a detection request, a peer $d \in D$ hence first checks if it can participate in any more requests. \mn[Stef]{Is that correct, or how/when else is that checked?}   
+When receiving a detection request, a peer $d \in D$ hence first checks if it can participate in any more requests. 
+% \mn[Stef]{Is that correct, or how/when else is that checked?}
+% \mn[Hatem]{at the source, if i got your question right}   
     
 If so, $d$ replies with its satisfaction level $\sat_d$ and a time stamp, both signed by its private signature key. 
 The time stamp prevents an attacker from replaying previous (low) satisfaction levels from benign nodes, as only recent satisfaction levels are valid.  
@@ -112,11 +119,12 @@ The reason for requesting at least $\minP$ replies is to prevent a few number of
 
 The source $s$ first verifies the content of the complaint. First, the source rejects any complaint from a node $b$ that has already participated in $\kappa$ requests. 
 If $s$ does not reject the complaint, $s$ then removes any satisfaction levels without valid signatures from the complaint.
-Furthermore, $s$ removes any responses from nodes that have exceeded their participation limit of are participating in two complaints at the same time. \mn[Stef]{At least that is what should happen...}
+Furthermore, $s$ removes any responses from nodes that have exceeded their participation limit or are participating in two complaints at the same time. 
 
 If the remaining valid responses still indicate an average satisfaction level of less than $\satThres$, the source 
 \begin{enumerate}
- \item Divides the set of peers in $D$ into two sets $H_n$ and $P_n$, where $H_n$ is assigned as the set of peers participating in the complaint that are already headnodes. \mn[Stef]{Itemize lists are strange as they are not full sentences but start with a capital letter and end in .}
+ \item Divides the set of peers in $D$ into two sets $H_n$ and $P_n$, where $H_n$ is assigned as the set of peers participating in the complaint that are already headnodes. 
+%  \mn[Stef]{Itemize lists are strange as they are not full sentences but start with a capital letter and end in .}
  \item Removes all peers in $H_n$ from its neighbor set.
  \item Randomly connects to another $|H_n|$ peers. 
  \item Adds peers (excluding peers in $H_n$) from its neighbor list to $P_n$, where $P_n = NeighborList\setminus H_n$ ($NeighborList$ is the set of peers in a neighbor list). 
@@ -139,8 +147,8 @@ The detection mechanism does not aim at expelling peers from the system.
 The reason for the lack of harshness of the penalty associated with a detection lies in the potentially high false positive rate for headnodes that exhibit a low performance. 
 These might be accidentally declared to be malicious peers due to not forwarding chunks sufficiently fast. 
 While removing such peers as headnodes is likely to benefit the system, it is not in our interest to ban them from the system. 
-Indeed, the only peers that get blacklisted are those who violate the detection mechanism constraints\mn[Stef]{Where does it talk about that? who does it when?}, i.e., participating in more than a single request at a time or initiating more than $\kappa$.
-
+Indeed, the only peers that get blacklisted are those who violate the detection mechanism constraints, i.e., participating in more than a single request at a time or initiating more than $\kappa$.
+% \mn[Stef]{Where does it talk about that? who does it when?}
 
 In general, the main target of the detection mechanism is to enhance the peers satisfaction level while keeping peer replacements and  
 signaling overhead low. In Section \ref{sec:eval}, we evaluate these three aspects from various scenarios. 
